# sapling

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CheckGit.cmake  INSTALL.md  README.md  conanfile.txt  sapling.cpp  version.cpp.in  version.h
.github/workflows/: ci.yml
claude_plans/: 2026-02-24-TipFileInput.md  2026-02-25-ConanUpgrade.md  2026-02-25-TmrcaInInfoOutput.md  2026-02-25-TreeHeightInInfoOutput.md  2026-03-06-SiteRateHeterogeneity.md  2026-03-09-MissingData.md  2026-03-12-SkygridPopulationModel.md  2026-03-13-TipDateUncertainty.md
core/: CMakeLists.txt  alias_sampler.h  coal_sim.cpp  coal_sim.h  dates.cpp  dates.h  distributions.h  estd.h  evo_hky.cpp  evo_hky.h  evo_model.cpp  evo_model.h  mutations.h  phylo_tree.cpp  phylo_tree.h  pop_model.cpp  pop_model.h  sequence.h  sequence_overlay.h  tip_file.cpp  tip_file.h  tree.h
demo-data/: demo.fasta  demo.maple  demo_info.json  demo_tree.nwk
tests/: CMakeLists.txt  alias_sampler_tests.cpp  dates_tests.cpp  mutations_tests.cpp  pop_model_tests.cpp  sequence_overlay_tests.cpp  sequence_tests.cpp  tip_file_tests.cpp  tree_tests.cpp
